<?xml version="1.0" encoding="utf-8"?>

<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item

            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_fragment_button"/>

    </group>

    <item android:title="Options">

        <menu>

            <group android:checkableBehavior="single">

                <item

                    android:id="@+id/drawer_settings"
                    android:icon="@drawable/ic_configuration"
                    android:title="@string/configuration_fragment_button"/>

                <item

                    android:id="@+id/drawer_crimes"
                    android:icon="@drawable/ic_crimes"
                    android:title="@string/crimes_fragment_button"/>

                <item

                    android:icon="@drawable/ic_users"
                    android:id="@+id/drawer_users"
                    android:title="@string/users_fragment_button"/>

            </group>

        </menu>

    </item>

</menu>