<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView

        android:id="@+id/text_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="@dimen/padding_title_user"
        android:text="@string/text_view_profile_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title_user"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/linearLayout_name_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_profile">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="right|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/name_surname_text_view"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/name_surname_text_view_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="left|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/example_surname_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/linearLayout_name_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_name_surname">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="right|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/email_text_view"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/email_text_view_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="left|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/exampleemail_text_view_usuario"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/linearLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_name_email">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="right|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/password_text_view"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/password_text_view_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="left|center_vertical"
            android:padding="@dimen/padding_text_user"
            android:text="@string/examplepassword_text_view_usuario"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_user"/>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/asd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_password">

    </LinearLayout>

    <Button

        android:id="@+id/button_save_profile_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_Save"
        android:textSize="@dimen/text_size_user"
        android:drawableLeft="@drawable/ic_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>